--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/main.css" type="text/css">
 </head>
 <body>
-
+  <h1 id="title">D3 Scatterplot Graph</h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.min.js">
   </script>
   <script src="./js/index.js">
