Added Axes and ScatterPoint Labels
Added the Axes and made sure the Scales worked correctly.

Added titles on the circles/points so it show description of what is going on.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <h1 id="title">D3 Scatterplot Graph</h1>
+  <main id="svgWrapper"></main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.min.js">
   </script>
   <script src="./js/index.js">
