--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <main id="svgWrapper"></main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.min.js">
   </script>
-  <script src="./js/index.js">
+  <script src="./js/index.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
   </script>
+ 
 </body>
 </html>
