--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/main.css" type="text/css">
 </head>
 <body>
-  <h1 id="title">D3 Scatterplot Graph</h1>
+  <h1 id="title">35 Fastest times up Alpe d'Huez</h1>
   <main id="svgWrapper"></main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.min.js">
   </script>
